[package]
name = "lau-gpu-compute"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-gpu-compute"
description = "GPU compute abstractions — tensor operations designed for parallel execution with CPU fallback"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
serde_json = "1"
